--- a/exercice4.html
+++ b/exercice4.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Exo3</title>
+    <title>Exo4</title>
 </head>
 <body>
-        <script src="script.js"></script>
+     <script src="script.js"></script>
 
         <script>
-       alert("Bonjour !");
-       prompt("Votre prénom ?");
+       prompt("Votre nom ?");
+       prompt("Votre prenom?");
+       prompt("Votre ville ?");
         </script>
-        
 </body>
 </html>
