--- a/Partie 1/3/exercice3.html
+++ b/Partie 1/3/exercice3.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Exo3</title>
 </head>
-<body>
-        <script src="script.js"></script>
 
-        <script>
-       alert("Bonjour !");
-       prompt("Votre prénom ?");
-        </script>
+<body>
+    <script src="script.js"></script>
+
+    <script>
+        var reponse = prompt("Comment t'appelles-tu ?",);
+            alert("BEN VA BIEN NIQUER TA MERE " + reponse + "<3");
+            alert("PS et va bien te faire foutre " );
         
+
+
+
+
+    </script>
+
 </body>
+
 </html>
