--- a/Partie 1/3/exercice3.html
+++ b/Partie 1/3/exercice3.html
@@ -14,11 +14,8 @@
     <script>
         var reponse = prompt("Comment t'appelles-tu ?",);
             alert("BEN VA BIEN NIQUER TA MERE " + reponse + "<3");
-            alert("PS et va bien te faire foutre " );
+            alert("PS et va bien te faire foutre " + reponse );
         
-
-
-
 
     </script>
 
