--- a/Partie 1/3/exercice3.html
+++ b/Partie 1/3/exercice3.html
@@ -14,7 +14,7 @@
     <script>
         var reponse = prompt("Comment t'appelles-tu ?",);
             alert("BEN VA BIEN NIQUER TA MERE " + reponse + "<3");
-            alert("PS et va bien te faire foutre " + reponse );
+            alert("PS je t'aime  " + reponse + ":D");
         
 
     </script>
