--- a/P1/4/exercice4.html
+++ b/P1/4/exercice4.html
@@ -10,9 +10,11 @@
      <script src="script.js"></script>
 
         <script>
-       prompt("Votre nom ?");
-       prompt("Votre prenom?");
-       prompt("Votre ville ?");
+       var name= prompt("Votre nom ?");
+       var prénom= prompt("Votre prenom?");
+       var ville= prompt("Votre ville ?");
+
+       alert("nom:  " +name+ " \n prenom: " +prénom+ " \n ville: " +ville); 
         </script>
 </body>
 </html>
